--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "babel-plugin-styled-components": "^1.13.2",
     "next": "11.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
+    "@auth0/auth0-react": "^1.6.0",
+    "@types/lodash": "^4.14.172",
     "@types/react": "17.0.18",
+    "axios": "^0.21.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "lodash": "^4.17.21",
     "typescript": "4.3.5"
   }
 }
